Make lightbox 100% width instead of 100vw to avoid overflow into scrollbar

--- a/public/css/lightbox.css
+++ b/public/css/lightbox.css
@@ -5,8 +5,8 @@
 #lightbox:not(.hidden) {
     position: fixed;
      box-sizing: border-box;
-     width: 100vw;
-     height: 100vh;
+     width: 100%;
+     height: 100%;
      z-index: 100;
      top: 0;
      left: 0;
